src/objects/marketing_campaigns_properties__x.object
<CustomObject>
    <description>marketing_campaigns_properties</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$marketing_campaigns_properties</externalName>
    <fields>
        <fullName>c_acct_type_cd__c</fullName>
        <description>c_acct_type_cd</description>
        <externalDeveloperName>c_acct_type_cd</externalDeveloperName>
        <label>c_acct_type_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_acct_type_cd_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_acct_type_cd_fk</description>
        <externalDeveloperName>c_acct_type_cd_fk</externalDeveloperName>
        <label>c_acct_type_cd_fk</label>
        <referenceTo>Account_Type_Code__c</referenceTo>
        <relationshipName>public_marketing_campaigns_properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_adw_break_12__c</fullName>
        <description>c_adw_break_12</description>
        <externalDeveloperName>c_adw_break_12</externalDeveloperName>
        <label>c_adw_break_12</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_adw_break_15__c</fullName>
        <description>c_adw_break_15</description>
        <externalDeveloperName>c_adw_break_15</externalDeveloperName>
        <label>c_adw_break_15</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_adw_break_24__c</fullName>
        <description>c_adw_break_24</description>
        <externalDeveloperName>c_adw_break_24</externalDeveloperName>
        <label>c_adw_break_24</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_adw_trip_break_12__c</fullName>
        <description>c_adw_trip_break_12</description>
        <externalDeveloperName>c_adw_trip_break_12</externalDeveloperName>
        <label>c_adw_trip_break_12</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_adw_trip_break_6__c</fullName>
        <description>c_adw_trip_break_6</description>
        <externalDeveloperName>c_adw_trip_break_6</externalDeveloperName>
        <label>c_adw_trip_break_6</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_age_18_plus__c</fullName>
        <description>c_age_18_plus</description>
        <externalDeveloperName>c_age_18_plus</externalDeveloperName>
        <label>c_age_18_plus</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_age_19_plus__c</fullName>
        <description>c_age_19_plus</description>
        <externalDeveloperName>c_age_19_plus</externalDeveloperName>
        <label>c_age_19_plus</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_age_21_plus__c</fullName>
        <description>c_age_21_plus</description>
        <externalDeveloperName>c_age_21_plus</externalDeveloperName>
        <label>c_age_21_plus</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_avg_day_hotel_flag__c</fullName>
        <description>c_avg_day_hotel_flag</description>
        <externalDeveloperName>c_avg_day_hotel_flag</externalDeveloperName>
        <label>c_avg_day_hotel_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_baccarat_pref__c</fullName>
        <description>c_baccarat_pref</description>
        <externalDeveloperName>c_baccarat_pref</externalDeveloperName>
        <label>c_baccarat_pref</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_campaign_cd__c</fullName>
        <description>c_campaign_cd</description>
        <externalDeveloperName>c_campaign_cd</externalDeveloperName>
        <label>c_campaign_cd</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_campaign_cd_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_campaign_cd_fk</description>
        <externalDeveloperName>c_campaign_cd_fk</externalDeveloperName>
        <label>c_campaign_cd_fk</label>
        <referenceTo>Campaign_Code__c</referenceTo>
        <relationshipName>public_marketing_campaigns_properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_campaign_desc__c</fullName>
        <description>c_campaign_desc</description>
        <externalDeveloperName>c_campaign_desc</externalDeveloperName>
        <label>c_campaign_desc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_campaign_type__c</fullName>
        <description>c_campaign_type</description>
        <externalDeveloperName>c_campaign_type</externalDeveloperName>
        <label>c_campaign_type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_campaign_type_desc__c</fullName>
        <description>c_campaign_type_desc</description>
        <externalDeveloperName>c_campaign_type_desc</externalDeveloperName>
        <label>c_campaign_type_desc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_campaign_type_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_campaign_type_fk</description>
        <externalDeveloperName>c_campaign_type_fk</externalDeveloperName>
        <label>c_campaign_type_fk</label>
        <referenceTo>Campaign_Type__c</referenceTo>
        <relationshipName>public_marketing_campaigns_properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_channel_pref__c</fullName>
        <description>c_channel_pref</description>
        <externalDeveloperName>c_channel_pref</externalDeveloperName>
        <label>c_channel_pref</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_channel_rec__c</fullName>
        <description>c_channel_rec</description>
        <externalDeveloperName>c_channel_rec</externalDeveloperName>
        <label>c_channel_rec</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_convienence_cd__c</fullName>
        <description>c_convienence_cd</description>
        <externalDeveloperName>c_convienence_cd</externalDeveloperName>
        <label>c_convienence_cd</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_convienence_cd_new__c</fullName>
        <description>c_convienence_cd_new</description>
        <externalDeveloperName>c_convienence_cd_new</externalDeveloperName>
        <label>c_convienence_cd_new</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_country_cd_ah__c</fullName>
        <description>c_country_cd_ah</description>
        <externalDeveloperName>c_country_cd_ah</externalDeveloperName>
        <label>c_country_cd_ah</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_credit_status_flag__c</fullName>
        <description>c_credit_status_flag</description>
        <externalDeveloperName>c_credit_status_flag</externalDeveloperName>
        <label>c_credit_status_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_credit_suppress_flag_m_ah__c</fullName>
        <description>c_credit_suppress_flag_m_ah</description>
        <externalDeveloperName>c_credit_suppress_flag_m_ah</externalDeveloperName>
        <label>c_credit_suppress_flag_m_ah</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_distance_cluster__c</fullName>
        <description>c_distance_cluster</description>
        <externalDeveloperName>c_distance_cluster</externalDeveloperName>
        <label>c_distance_cluster</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_dom_cd_prop__c</fullName>
        <description>c_dom_cd_prop</description>
        <externalDeveloperName>c_dom_cd_prop</externalDeveloperName>
        <label>c_dom_cd_prop</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_dom_cd_prop_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_dom_cd_prop_fk</description>
        <externalDeveloperName>c_dom_cd_prop_fk</externalDeveloperName>
        <label>c_dom_cd_prop_fk</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>public_marketing_campaigns_properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_dom_market_cd__c</fullName>
        <description>c_dom_market_cd</description>
        <externalDeveloperName>c_dom_market_cd</externalDeveloperName>
        <label>c_dom_market_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_dom_market_cd_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_dom_market_cd_fk</description>
        <externalDeveloperName>c_dom_market_cd_fk</externalDeveloperName>
        <label>c_dom_market_cd_fk</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipName>public_marketing_campaigns_properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_dom_pref_prop_cd__c</fullName>
        <description>c_dom_pref_prop_cd</description>
        <externalDeveloperName>c_dom_pref_prop_cd</externalDeveloperName>
        <label>c_dom_pref_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_dom_pref_prop_cd_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_dom_pref_prop_cd_fk</description>
        <externalDeveloperName>c_dom_pref_prop_cd_fk</externalDeveloperName>
        <label>c_dom_pref_prop_cd_fk</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>public_marketing_campaigns_properties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_dom_prop_host_cd_adj_ah__c</fullName>
        <description>c_dom_prop_host_cd_adj_ah</description>
        <externalDeveloperName>c_dom_prop_host_cd_adj_ah</externalDeveloperName>
        <label>c_dom_prop_host_cd_adj_ah</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_drive_distance_cluster__c</fullName>
        <description>c_drive_distance_cluster</description>
        <externalDeveloperName>c_drive_distance_cluster</externalDeveloperName>
        <label>c_drive_distance_cluster</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_emailable__c</fullName>
        <description>c_emailable</description>
        <externalDeveloperName>c_emailable</externalDeveloperName>
        <label>c_emailable</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_ethnic_group1__c</fullName>
        <description>c_ethnic_group1</description>
        <externalDeveloperName>c_ethnic_group1</externalDeveloperName>
        <label>c_ethnic_group1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_frequency__c</fullName>
        <description>c_frequency</description>
        <externalDeveloperName>c_frequency</externalDeveloperName>
        <label>c_frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_frequency_tc_12__c</fullName>
        <description>c_frequency_tc_12</description>
        <externalDeveloperName>c_frequency_tc_12</externalDeveloperName>
        <label>c_frequency_tc_12</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_frequency_tc__c</fullName>
        <description>c_frequency_tc</description>
        <externalDeveloperName>c_frequency_tc</externalDeveloperName>
        <label>c_frequency_tc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_frequency_ttm_24__c</fullName>
        <description>c_frequency_ttm_24</description>
        <externalDeveloperName>c_frequency_ttm_24</externalDeveloperName>
        <label>c_frequency_ttm_24</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_frequency_ttm__c</fullName>
        <description>c_frequency_ttm</description>
        <externalDeveloperName>c_frequency_ttm</externalDeveloperName>
        <label>c_frequency_ttm</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_future_res_flag_mkt_ah__c</fullName>
        <description>c_future_res_flag_mkt_ah</description>
        <externalDeveloperName>c_future_res_flag_mkt_ah</externalDeveloperName>
        <label>c_future_res_flag_mkt_ah</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_game_pref__c</fullName>
        <description>c_game_pref</description>
        <externalDeveloperName>c_game_pref</externalDeveloperName>
        <label>c_game_pref</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_gender__c</fullName>
        <description>c_gender</description>
        <externalDeveloperName>c_gender</externalDeveloperName>
        <label>c_gender</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_geo_dm_zone__c</fullName>
        <description>c_geo_dm_zone</description>
        <externalDeveloperName>c_geo_dm_zone</externalDeveloperName>
        <label>c_geo_dm_zone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_geo_rpt_zone__c</fullName>
        <description>c_geo_rpt_zone</description>
        <externalDeveloperName>c_geo_rpt_zone</externalDeveloperName>
        <label>c_geo_rpt_zone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_gst_pref_mail_flag__c</fullName>
        <description>c_gst_pref_mail_flag</description>
        <externalDeveloperName>c_gst_pref_mail_flag</externalDeveloperName>
        <label>c_gst_pref_mail_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_host_type__c</fullName>
        <description>c_host_type</description>
        <externalDeveloperName>c_host_type</externalDeveloperName>
        <label>c_host_type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_hotel_adw_break_12__c</fullName>
        <description>c_hotel_adw_break_12</description>
        <externalDeveloperName>c_hotel_adw_break_12</externalDeveloperName>
        <label>c_hotel_adw_break_12</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_hotel_adw_break_15__c</fullName>
        <description>c_hotel_adw_break_15</description>
        <externalDeveloperName>c_hotel_adw_break_15</externalDeveloperName>
        <label>c_hotel_adw_break_15</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_hotel_adw_break_24__c</fullName>
        <description>c_hotel_adw_break_24</description>
        <externalDeveloperName>c_hotel_adw_break_24</externalDeveloperName>
        <label>c_hotel_adw_break_24</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_hotel_adw_break__c</fullName>
        <description>c_hotel_adw_break</description>
        <externalDeveloperName>c_hotel_adw_break</externalDeveloperName>
        <label>c_hotel_adw_break</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_id_verified__c</fullName>
        <description>c_id_verified</description>
        <externalDeveloperName>c_id_verified</externalDeveloperName>
        <label>c_id_verified</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_last_gaming_trip__c</fullName>
        <description>c_last_gaming_trip</description>
        <externalDeveloperName>c_last_gaming_trip</externalDeveloperName>
        <label>c_last_gaming_trip</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_mailable__c</fullName>
        <description>c_mailable</description>
        <externalDeveloperName>c_mailable</externalDeveloperName>
        <label>c_mailable</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_main_ethnic_type__c</fullName>
        <description>c_main_ethnic_type</description>
        <externalDeveloperName>c_main_ethnic_type</externalDeveloperName>
        <label>c_main_ethnic_type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_marketing_state_cd__c</fullName>
        <description>c_marketing_state_cd</description>
        <externalDeveloperName>c_marketing_state_cd</externalDeveloperName>
        <label>c_marketing_state_cd</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_mkt_host_cd_adj_ah__c</fullName>
        <description>c_mkt_host_cd_adj_ah</description>
        <externalDeveloperName>c_mkt_host_cd_adj_ah</externalDeveloperName>
        <label>c_mkt_host_cd_adj_ah</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_msa__c</fullName>
        <description>c_msa</description>
        <externalDeveloperName>c_msa</externalDeveloperName>
        <label>c_msa</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_msa_cd__c</fullName>
        <description>c_msa_cd</description>
        <externalDeveloperName>c_msa_cd</externalDeveloperName>
        <label>c_msa_cd</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pref_prop_cd__c</fullName>
        <description>c_pref_prop_cd</description>
        <externalDeveloperName>c_pref_prop_cd</externalDeveloperName>
        <label>c_pref_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_pref_prop_cd_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_pref_prop_cd_fk</description>
        <externalDeveloperName>c_pref_prop_cd_fk</externalDeveloperName>
        <label>c_pref_prop_cd_fk</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>public_marketing_campaigns_properties2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_pref_prop_host_cd__c</fullName>
        <description>c_pref_prop_host_cd</description>
        <externalDeveloperName>c_pref_prop_host_cd</externalDeveloperName>
        <label>c_pref_prop_host_cd</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_preferred_written_language__c</fullName>
        <description>c_preferred_written_language</description>
        <externalDeveloperName>c_preferred_written_language</externalDeveloperName>
        <label>c_preferred_written_language</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_profit_flag_ent__c</fullName>
        <description>c_profit_flag_ent</description>
        <externalDeveloperName>c_profit_flag_ent</externalDeveloperName>
        <label>c_profit_flag_ent</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_profit_flag_mkt__c</fullName>
        <description>c_profit_flag_mkt</description>
        <externalDeveloperName>c_profit_flag_mkt</externalDeveloperName>
        <label>c_profit_flag_mkt</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd_1__c</fullName>
        <description>c_prop_cd_1</description>
        <externalDeveloperName>c_prop_cd_1</externalDeveloperName>
        <label>c_prop_cd_1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd_1_fk__c</fullName>
        <description>c_prop_cd_1_fk</description>
        <externalDeveloperName>c_prop_cd_1_fk</externalDeveloperName>
        <label>c_prop_cd_1_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd_1_host_cd_adj_ah__c</fullName>
        <description>c_prop_cd_1_host_cd_adj_ah</description>
        <externalDeveloperName>c_prop_cd_1_host_cd_adj_ah</externalDeveloperName>
        <label>c_prop_cd_1_host_cd_adj_ah</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd_2__c</fullName>
        <description>c_prop_cd_2</description>
        <externalDeveloperName>c_prop_cd_2</externalDeveloperName>
        <label>c_prop_cd_2</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd_2_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_prop_cd_2_fk</description>
        <externalDeveloperName>c_prop_cd_2_fk</externalDeveloperName>
        <label>c_prop_cd_2_fk</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>public_marketing_campaigns_properties4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <description>c_prop_cd</description>
        <externalDeveloperName>c_prop_cd</externalDeveloperName>
        <label>c_prop_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd_fk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>c_prop_cd_fk</description>
        <externalDeveloperName>c_prop_cd_fk</externalDeveloperName>
        <label>c_prop_cd_fk</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>public_marketing_campaigns_properties5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c_prop_mail_cd__c</fullName>
        <description>c_prop_mail_cd</description>
        <externalDeveloperName>c_prop_mail_cd</externalDeveloperName>
        <label>c_prop_mail_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_market_cd__c</fullName>
        <description>c_prop_market_cd</description>
        <externalDeveloperName>c_prop_market_cd</externalDeveloperName>
        <label>c_prop_market_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_market_cd_fk__c</fullName>
        <description>c_prop_market_cd_fk</description>
        <externalDeveloperName>c_prop_market_cd_fk</externalDeveloperName>
        <label>c_prop_market_cd_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_property_frequency__c</fullName>
        <description>c_property_frequency</description>
        <externalDeveloperName>c_property_frequency</externalDeveloperName>
        <label>c_property_frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_recency__c</fullName>
        <description>c_recency</description>
        <externalDeveloperName>c_recency</externalDeveloperName>
        <label>c_recency</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_regulatory_state_cd__c</fullName>
        <description>c_regulatory_state_cd</description>
        <externalDeveloperName>c_regulatory_state_cd</externalDeveloperName>
        <label>c_regulatory_state_cd</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_tdc_supp_flag__c</fullName>
        <description>c_tdc_supp_flag</description>
        <externalDeveloperName>c_tdc_supp_flag</externalDeveloperName>
        <label>c_tdc_supp_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_tier_cd__c</fullName>
        <description>c_tier_cd</description>
        <externalDeveloperName>c_tier_cd</externalDeveloperName>
        <label>c_tier_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_tier_cd_fk__c</fullName>
        <description>c_tier_cd_fk</description>
        <externalDeveloperName>c_tier_cd_fk</externalDeveloperName>
        <label>c_tier_cd_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_tierscore_desc__c</fullName>
        <description>c_tierscore_desc</description>
        <externalDeveloperName>c_tierscore_desc</externalDeveloperName>
        <label>c_tierscore_desc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_uci_supp_flag__c</fullName>
        <description>c_uci_supp_flag</description>
        <externalDeveloperName>c_uci_supp_flag</externalDeveloperName>
        <label>c_uci_supp_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_ucl_supp_flag__c</fullName>
        <description>c_ucl_supp_flag</description>
        <externalDeveloperName>c_ucl_supp_flag</externalDeveloperName>
        <label>c_ucl_supp_flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_uk_res_supress__c</fullName>
        <description>c_uk_res_supress</description>
        <externalDeveloperName>c_uk_res_supress</externalDeveloperName>
        <label>c_uk_res_supress</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_version_cd__c</fullName>
        <description>c_version_cd</description>
        <externalDeveloperName>c_version_cd</externalDeveloperName>
        <label>c_version_cd</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_video_poker_pref__c</fullName>
        <description>c_video_poker_pref</description>
        <externalDeveloperName>c_video_poker_pref</externalDeveloperName>
        <label>c_video_poker_pref</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_worth_break__c</fullName>
        <description>c_worth_break</description>
        <externalDeveloperName>c_worth_break</externalDeveloperName>
        <label>c_worth_break</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_zip_7_ah__c</fullName>
        <description>c_zip_7_ah</description>
        <externalDeveloperName>c_zip_7_ah</externalDeveloperName>
        <label>c_zip_7_ah</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_zip_7_pdb__c</fullName>
        <description>c_zip_7_pdb</description>
        <externalDeveloperName>c_zip_7_pdb</externalDeveloperName>
        <label>c_zip_7_pdb</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>contact</description>
        <externalDeveloperName>contact</externalDeveloperName>
        <label>contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Campaigns Properties</relationshipLabel>
        <relationshipName>public_marketing_campaigns_properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>d_campaign_score_dt__c</fullName>
        <description>d_campaign_score_dt</description>
        <externalDeveloperName>d_campaign_score_dt</externalDeveloperName>
        <label>d_campaign_score_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_create_dt_ent__c</fullName>
        <description>d_create_dt_ent</description>
        <externalDeveloperName>d_create_dt_ent</externalDeveloperName>
        <label>d_create_dt_ent</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_create_dt_mkt__c</fullName>
        <description>d_create_dt_mkt</description>
        <externalDeveloperName>d_create_dt_mkt</externalDeveloperName>
        <label>d_create_dt_mkt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_first_dt_played_mkt_ah__c</fullName>
        <description>d_first_dt_played_mkt_ah</description>
        <externalDeveloperName>d_first_dt_played_mkt_ah</externalDeveloperName>
        <label>d_first_dt_played_mkt_ah</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_first_gaming_dt_ent_ah__c</fullName>
        <description>d_first_gaming_dt_ent_ah</description>
        <externalDeveloperName>d_first_gaming_dt_ent_ah</externalDeveloperName>
        <label>d_first_gaming_dt_ent_ah</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_first_gaming_dt_mkt_ah__c</fullName>
        <description>d_first_gaming_dt_mkt_ah</description>
        <externalDeveloperName>d_first_gaming_dt_mkt_ah</externalDeveloperName>
        <label>d_first_gaming_dt_mkt_ah</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_last_activity_dt__c</fullName>
        <description>d_last_activity_dt</description>
        <externalDeveloperName>d_last_activity_dt</externalDeveloperName>
        <label>d_last_activity_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_last_activity_dt_prop__c</fullName>
        <description>d_last_activity_dt_prop</description>
        <externalDeveloperName>d_last_activity_dt_prop</externalDeveloperName>
        <label>d_last_activity_dt_prop</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_last_rated_dt_mkt_ah__c</fullName>
        <description>d_last_rated_dt_mkt_ah</description>
        <externalDeveloperName>d_last_rated_dt_mkt_ah</externalDeveloperName>
        <label>d_last_rated_dt_mkt_ah</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_min_est_dt__c</fullName>
        <description>d_min_est_dt</description>
        <externalDeveloperName>d_min_est_dt</externalDeveloperName>
        <label>d_min_est_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_act_all_12mn_ap_ah__c</fullName>
        <description>f_act_all_12mn_ap_ah</description>
        <externalDeveloperName>f_act_all_12mn_ap_ah</externalDeveloperName>
        <label>f_act_all_12mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_act_all_1mn_ap_ah__c</fullName>
        <description>f_act_all_1mn_ap_ah</description>
        <externalDeveloperName>f_act_all_1mn_ap_ah</externalDeveloperName>
        <label>f_act_all_1mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_act_all_3mn_ap_ah__c</fullName>
        <description>f_act_all_3mn_ap_ah</description>
        <externalDeveloperName>f_act_all_3mn_ap_ah</externalDeveloperName>
        <label>f_act_all_3mn_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_act_all_ap_pdb_12mn_plus__c</fullName>
        <description>f_act_all_ap_pdb_12mn_plus</description>
        <externalDeveloperName>f_act_all_ap_pdb_12mn_plus</externalDeveloperName>
        <label>f_act_all_ap_pdb_12mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_act_all_ap_pdb_24mn_plus__c</fullName>
        <description>f_act_all_ap_pdb_24mn_plus</description>
        <externalDeveloperName>f_act_all_ap_pdb_24mn_plus</externalDeveloperName>
        <label>f_act_all_ap_pdb_24mn_plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_act_all_cms_first_day_m_ah__c</fullName>
        <description>f_act_all_cms_first_day_m_ah</description>
        <externalDeveloperName>f_act_all_cms_first_day_m_ah</externalDeveloperName>
        <label>f_act_all_cms_first_day_m_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_act_all_cms_first_hr_m_ah__c</fullName>
        <description>f_act_all_cms_first_hr_m_ah</description>
        <externalDeveloperName>f_act_all_cms_first_hr_m_ah</externalDeveloperName>
        <label>f_act_all_cms_first_hr_m_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_act_all_cms_first_trp_m_ah__c</fullName>
        <description>f_act_all_cms_first_trp_m_ah</description>
        <externalDeveloperName>f_act_all_cms_first_trp_m_ah</externalDeveloperName>
        <label>f_act_all_cms_first_trp_m_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_actual_all_ytd_ap_ah__c</fullName>
        <description>f_actual_all_ytd_ap_ah</description>
        <externalDeveloperName>f_actual_all_ytd_ap_ah</externalDeveloperName>
        <label>f_actual_all_ytd_ap_ah</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_adw_12__c</fullName>
        <description>f_adw_12</description>
        <externalDeveloperName>f_adw_12</externalDeveloperName>
        <label>f_adw_12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_adw_15__c</fullName>
        <description>f_adw_15</description>
        <externalDeveloperName>f_adw_15</externalDeveloperName>
        <label>f_adw_15</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>